tests/good/topic_struct1.radl
t : topic { FIELDS
	p : struct { FIELDS x : int32 0 y : int32 0 }
}


