tests/bad/ident_type2.radl
i : int32 42

t : topic { FIELDS
    i
}
